--- a/style.css
+++ b/style.css
@@ -123,14 +123,19 @@ li{
 
 .iphone {
 
-    width: 450px;
+    width: 25%;
     /*Largura  da imagem*/
-    margin-top: 100px;
+    margin-top: 100px; 
+    z-index: 99;
 } 
 
 .circulo{
     width: 100%;
-    height: 100%;
+    height: 135%;
     background-color: #81a5c4;
     position: absolute;
+    top: 0;
+    left: 0;
+    clip-path: circle(600px at right 850px);
+
 }
